--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.10.0",
-    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -19,6 +18,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "reselect": "^4.1.7",
+    "sass": "^1.77.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
